# elements

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: tests.yaml
elements/: __init__.py  agg.py  checkpoint.py  config.py  counter.py  diskcache.py  flags.py  fps.py  logger.py  parser.py  path.py  plotting.py  printing.py  space.py  timer.py  tree.py  usage.py  utils.py  uuid.py  when.py
tests/: test_basics.py  test_checkpoint.py  test_diskcache.py  test_flags.py  test_path.py  test_tree.py
